@@ -4,10 +4,18 @@
 
   <subtitle>About This Release</subtitle>
 
+  <para>Release 1.2.1 is a maintenance release in the OpenNMS stable branch.
+  It contains a few bug fixes and several small features. "Stable" releases
+  may contain new features, as long as it is determined that they pose a very
+  small risk to current features. Usually, these features will add new
+  functionality without modifying existing feature behavior.</para>
+
+  <para>The code word for 1.2.1 is "luckycharms".</para>
+
   <para>Release 1.2.0 is the first stable, or production, release of OpenNMS
   in a long time. It is basically 1.1.5 with numerous bug fixes. With the
   release of 1.2.0, we will begin development on 1.3 - the next unstable
-  release. </para>
+  release.</para>
 
   <para>The code word for 1.2.0 is "valentine".</para>
 
